--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
     --selected-text-color: #2196F3;
     --text-color:#212121;
@@ -8,6 +10,9 @@
     --border-color:#EEEEEE;
 }
 
+body{
+    font-family: "Roboto";
+}
 header > a {
     color: var(--selected-text-color);
 }
