--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,16 @@ footer > a {
   height: 1272px;
   align-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 94px;
 }
 
 .webstudio-item {
   width: 370px;
   height: 404px;
   border: 1px solid var(--border-color);
+}
+.webstudio-item:hover{
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 
 }
 
